# CPlusSpell

./: .gitignore  CMakeLists.txt  CSpell.cpp  CSpellParallel.cpp  CSpellPipelined.cpp  HDFS_2k.csv  HDFS_2k.txt  README.md  compare.py  compile.sh  continuity.py  cspell.py  parallel.cpp  parallel.sh  parsing_test.py  preprocess.py  spell.py  test.py  test_spellpy.py  wrapper.cpp
python/: compare.py  continuity.py  cspell.py  parsing_test.py  preprocess.py
src/: CSpell.cpp  CSpellParallel.cpp  CSpellPipelined.cpp  parallel.cpp  wrapper.cpp
